[build-system]
requires = [
    "setuptools>=61",
]
build-backend = "setuptools.build_meta"

[project]
name = "tbk-utils"
version = "0.1.0"
description = "Turing-zero Bot Kits tools & admin app"
authors = [
    {name = "MarkHtz", email = "feiwumark@gmail.com"},
    {name = "Turing-zero Robotics", email = "turingzero.robot@gmail.com"},
]
dependencies = [
]
keywords = ["robotics","ros","robocup","turing-zero","tbk"]

[project.urls]
Homepage = "https://github.com/Turing-zero/tbk-utils"
Documentation = "https://turing-zero-bot-kits.readthedocs.io/"
Repository = "https://github.com/Turing-zero/tbk-utils.git"
Issues = "https://github.com/Turing-zero/tbk-utils/issues"