[build-system]
requires = [
    "setuptools>=64",
    "setuptools_scm>=8"
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "tbkpy"
dynamic = ["version"]
description = "Turing-zero Bot Kits tools & admin app"
authors = [
    {name = "MarkHtz", email = "feiwumark@gmail.com"},
    {name = "Turing-zero Robotics", email = "turingzero.robot@gmail.com"},
]
dependencies = [
]
keywords = ["robotics","ros","robocup","turing-zero","tbk"]

[project.urls]
Homepage = "https://github.com/Turing-zero/tbkpy"
Documentation = "https://turing-zero-bot-kits.readthedocs.io/"
Repository = "https://github.com/Turing-zero/tbkpy.git"
Issues = "https://github.com/Turing-zero/tbkpy/issues"